welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: '(' expected but identifier found.
    if a%5==0 {
       ^fizzBuzz:6: error: illegal start of simple expression
  } else if (a%5==0) {
  ^